# Project_electronic_platform

./: .env.sample  README.md  Readme.md  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
